# ChangeLog for app-text/manedit
# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-text/manedit/ChangeLog,v 1.24 2006/09/22 03:56:17 fuzzyray Exp $

*manedit-0.7.1 (22 Sep 2006)

  22 Sep 2006; Paul Varner <fuzzyray@gentoo.org> +manedit-0.7.1.ebuild:
  Version bump.

  27 Apr 2006; Marien Zwart <marienz@gentoo.org> files/digest-manedit-0.6.1,
  Manifest:
  Fixing SHA256 digest, pass four

  02 Mar 2006; Paul Varner <fuzzyray@gentoo.org> -manedit-0.5.8.ebuild,
  -manedit-0.5.10.ebuild, manedit-0.6.1.ebuild:
  Removed old ebuilds and modified dependencies of manedit-0.6.1 for modular X.

  18 Aug 2005; Michael Hanselmann <hansmi@gentoo.org> manedit-0.6.1.ebuild:
  Stable on ppc.

  18 Aug 2005; Gustavo Zacarias <gustavoz@gentoo.org> manedit-0.6.1.ebuild:
  Stable on sparc wrt #102870

  17 Aug 2005; Paul Varner <fuzzyray@gentoo.org> manedit-0.6.1.ebuild:
  Stable on x86

*manedit-0.6.1 (22 Jun 2005)

  22 Jun 2005; Paul Varner <fuzzyray@gentoo.org> +manedit-0.6.1.ebuild:
  Revision bump to fix Bug 90407

  24 Apr 2005; Michael Hanselmann <hansmi@gentoo.org> manedit-0.5.10.ebuild:
  Stable on ppc.

  03 Aug 2004; David Holm <dholm@gentoo.org> manedit-0.5.10.ebuild:
  Added to ~ppc.

  01 Jul 2004; Jeremy Huddleston <eradicator@gentoo.org>
  manedit-0.5.10.ebuild, manedit-0.5.8.ebuild:
  virtual/glibc -> virtual/libc

  18 Apr 2004; Jason Wever <weeve@gentoo.org> manedit-0.5.10.ebuild:
  Stable on sparc.

*manedit-0.5.10 (24 Jun 2003)

  24 Jun 2003; Mike Frysinger <vapier@gentoo.org> :
  Version bump.

*manedit-0.5.8 (27 Jan 2003)

  13 Apr 2003; Alastair Tse <liquidx@gentoo.org> manedit-0.5.8.ebuild:
  change icon installation to /usr/share/pixmaps

  15 Mar 2003; Alastair Tse <liquidx@gentoo.org> manedit-0.5.8.ebuild:
  Marking as stable for x86. 0.5.6 breaks with newer gcc.

  27 Jan 2003; Mike Frysinger <vapier@gentoo.org> :
  Version bump + FHS fix (/usr/man)

*manedit-0.5.6-r1 (14 May, 2002)
