@@ -4,14 +4,14 @@ EBUILD manedit-0.6.1.ebuild 1440 RMD160 1886e5ab8e718dc293579e6d053f96663b1fe9c0
 MD5 ab4f43f3ccc4bd977e6dfac187c41b3d manedit-0.6.1.ebuild 1440
 RMD160 1886e5ab8e718dc293579e6d053f96663b1fe9c0 manedit-0.6.1.ebuild 1440
 SHA256 6f7f3e2728f05bbb754019402440f7868e863314e4ffd073405dd8fd1ea0bc78 manedit-0.6.1.ebuild 1440
-EBUILD manedit-0.7.1.ebuild 1444 RMD160 5657034ffbef80a4dd81a9cad0716170cfcc070e SHA1 8280277266626e86271912308e752c09666f0cbc SHA256 3421d3aed203bbb274f18d516e41053addf7547fd07a9afe32ce639593882da3
-MD5 abe91e435719858327dc1131c9347d8c manedit-0.7.1.ebuild 1444
-RMD160 5657034ffbef80a4dd81a9cad0716170cfcc070e manedit-0.7.1.ebuild 1444
-SHA256 3421d3aed203bbb274f18d516e41053addf7547fd07a9afe32ce639593882da3 manedit-0.7.1.ebuild 1444
-MISC ChangeLog 2575 RMD160 d415e7da6e5d0676ff2620ec44ee9a4a31457b93 SHA1 78806a56f89cd361f9f0cef466edaaded3267a32 SHA256 9b9c2fc300430f50181864662388eb12b9c243488a595b12edd0833c3d3c8ece
-MD5 4ace54e9e516342518bd3040ef842a22 ChangeLog 2575
-RMD160 d415e7da6e5d0676ff2620ec44ee9a4a31457b93 ChangeLog 2575
-SHA256 9b9c2fc300430f50181864662388eb12b9c243488a595b12edd0833c3d3c8ece ChangeLog 2575
+EBUILD manedit-0.7.1.ebuild 1445 RMD160 6672ed0fcd5b00f14f346ac305611b8bfbdfa53c SHA1 cc448d2da64028c901017b110ecaca5036c9c297 SHA256 a605e97295672a21ee2abba506d1ba5e998abcf5e1a8c8e710bd5c6b69b35d4f
+MD5 1d33736011cf6840c8d328dbf2e1de9f manedit-0.7.1.ebuild 1445
+RMD160 6672ed0fcd5b00f14f346ac305611b8bfbdfa53c manedit-0.7.1.ebuild 1445
+SHA256 a605e97295672a21ee2abba506d1ba5e998abcf5e1a8c8e710bd5c6b69b35d4f manedit-0.7.1.ebuild 1445
+MISC ChangeLog 2684 RMD160 f900b08e54da4fd9e2113ced518bb632a14b6f25 SHA1 e04fa3ce895d8520b75df60d510ab3969ceafc96 SHA256 5ec9321508a0bcff0dab21d58ce54c20021294e971d17ac2af611d2d10d33030
+MD5 0d72cdb365b809c39e38bd9919f048c8 ChangeLog 2684
+RMD160 f900b08e54da4fd9e2113ced518bb632a14b6f25 ChangeLog 2684
+SHA256 5ec9321508a0bcff0dab21d58ce54c20021294e971d17ac2af611d2d10d33030 ChangeLog 2684
 MISC metadata.xml 220 RMD160 6a284ccc5d5f66186cb12f0f73382dfbeba01b9d SHA1 ed2c09d9c81d7212ed1e9205bd5cdbab2f4662be SHA256 fd36e5788255d70949bdea8e8ccdac1b684491325da852c87b3fb9b5c7ffc820
 MD5 d653ccb02640fb8c7bb937974c9cc8fa metadata.xml 220
 RMD160 6a284ccc5d5f66186cb12f0f73382dfbeba01b9d metadata.xml 220
