@@ -1,6 +1,10 @@
 # ChangeLog for app-text/manedit
-# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/manedit/ChangeLog,v 1.24 2006/09/22 03:56:17 fuzzyray Exp $
+# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/app-text/manedit/ChangeLog,v 1.25 2007/01/07 19:06:32 dertobi123 Exp $
+
+  07 Jan 2007; Tobias Scherbaum <dertobi123@gentoo.org>
+  manedit-0.7.1.ebuild:
+  ppc stable, bug #160291
 
 *manedit-0.7.1 (22 Sep 2006)
 
